# crm-ai-agent

./: .gitignore  Dockerfile  README.md  REORGANIZATION.md  config.py  env.example  example_calendar_agent.py  example_email_extractor.py  example_email_monitor.py  example_gmail_agent.py  example_usage.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py  pubsub_handler.py
docs/: AUTHENTICATION.md  BIGQUERY_SETUP.md  GCP_CREDENTIALS_REFRESH.md  GCP_SERVICE_ACCOUNT_SETUP.md  GMAIL_AGENT_SETUP.md  GMAIL_SETUP.md  INTEGRATION.md  PORT_TROUBLESHOOTING.md  QUICK_START.md  REORGANIZATION.md  TEST_SENTENCES.md  TROUBLESHOOTING.md  ZOOM_SETUP.md
models/: __init__.py  bigquery_schema.py  email_schemas.py  schemas.py
scripts/: debug_chat.py  fix_calendar_token.py  fix_gmail_token.py  fix_port.sh  fix_port_config.py  get_gmail_refresh_token.py  install_and_verify_gcloud.sh  kill_all_servers.sh  kill_port.sh  refresh_gcp_credentials.sh  setup_gcloud.sh  start_server.sh  test_api.sh  test_bigquery_connection.py  test_calendar_connection.py  test_chat_endpoint.py  verify_gmail_credentials.py
services/: __init__.py  bigquery_storage.py  calendar_agent.py  email_extractor.py  email_monitor.py  email_sender.py  extraction.py  gmail_agent.py  ingestion.py  preprocessing.py  voice_service.py
src/agents/: __init__.py  agent_tools.py  calendar_agent.py  chatagent.py  chatagents.py  gmail_agent.py  prompts.py
tests/: test_api.py  test_api_endpoints.py  test_calendar_agent_move_event.py  test_email_extractor.py  test_email_monitor.py  test_email_sender.py  test_gmail_agent.py  test_gmail_agent_full.py  test_gmail_agent_get_emails.py  test_gmail_agent_simple.py  test_preprocessing.py
voice-pipeline/src/: main.py  (+4 more)
